Added Styling, Clear List and Crossing Out
Added some very simple styling, the ability to cross something out and have it disappear as well as the ability to clear an entire list.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h3>What would you like to add to the list?</h3>
+    <h1>What would you like to add to the list?</h1>
     <input type="text" id="item-to-add">
     <button id="btn-add-item">Add item</button>
+    <button id="btn-clear-list">Clear List</button>
     <div id="list-of-items">
         <ul>      
-                  
+            <!-- <li><input type="checkbox" id="test"><label for="test"></label></li> -->
         </ul>
     </div>
     <script src="index.js"></script>
