Added Sign In/Out/Up Functionality
Added authentication and authorization functionalities using Google Firebase

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
         <input type="text" id="email-field">
         <h3>Password</h3>
         <input type="password" id="password-field">
+        <br><br>
+        <button id="btn-sign-in">Sign in!</button>
         <h2>Sign Up!</h2>
+        <h3>Email</h3>
+        <input type="text" id="sign-in-email">
+        <h3>Password</h3>
+        <input type="password" id="sign-in-password">
+        <br><br>
+        <button id="btn-sign-up">Sign up!</button>
     </div>
     <div id="list-screen">
         <h1>What would you like to add to the list?</h1>
@@ -27,9 +35,108 @@
             <ul>
 
             </ul>
+        <button id="btn-sign-out">Sign out!</button>
         </div>
     </div>
     <script src="index.js"></script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-app.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+        import {
+            getAuth, 
+            createUserWithEmailAndPassword,
+            signInWithEmailAndPassword,
+            onAuthStateChanged,
+            signOut
+        } from "https://www.gstatic.com/firebasejs/10.0.0/firebase-auth.js";
+        import {getDatabase, set, get, update, remove, ref, child} from "https://www.gstatic.com/firebasejs/10.0.0/firebase-database.js";
+        
+
+        // Your web app's Firebase configuration
+        const firebaseConfig = {
+        apiKey: "AIzaSyCnAoDMFpJ3wN9Gvje5GMefmkdi7UhwHYM",
+        authDomain: "todo-list-9db59.firebaseapp.com",
+        projectId: "todo-list-9db59",
+        storageBucket: "todo-list-9db59.appspot.com",
+        messagingSenderId: "462327275050",
+        appId: "1:462327275050:web:6af7166d0d352034b0ad53"
+        };
+
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const db = getDatabase();
+
+        const userEmail = document.getElementById("email-field");
+        const userPassword = document.getElementById("password-field");
+        const signUpButton = document.getElementById("btn-sign-up");
+
+        const signInEmail = document.getElementById("sign-in-email");
+        const signInPassword = document.getElementById("sign-in-password");
+        const signInButton = document.getElementById("btn-sign-in");
+
+        const listScreen = document.getElementById("list-screen");
+        const signOutButton = document.getElementById("btn-sign-out");
+        listScreen.style.display = 'none';
+
+        const userSignUp = async() => {
+            const signUpEmail = userEmail.value;
+            const signUpPassword = userPassword.value;
+            createUserWithEmailAndPassword(auth, signUpEmail, signUpPassword)
+            .then((userCredential) => {
+                const user = userCredential.user;
+                alert("Your account has been created!");
+                set(ref(db, "People/" + user.uid), {
+                    Name: enterName.value,
+                    ID: enterID.value,
+                    Age: enterAge.value
+            })
+            })
+            .catch((error) => {
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                console.log(errorCode + errorMessage);
+            })
+        };
+
+        const userSignIn = async() => {
+            const signInEmail = userEmail.value;
+            const signInPassword = userPassword.value;
+            signInWithEmailAndPassword(auth, signInEmail, signInPassword)
+            .then((userCredential) => {
+                const user = userCredential.user;
+                console.log(user);
+                alert("You have signed in successfully!");
+            })
+            .catch((error) => {
+                const errorCode = error.code;
+                const errorMessage = error.message;
+                console.log(errorCode + errorMessage);
+            })
+        }
+
+        const checkAuthState = async() => {
+            onAuthStateChanged(auth, user => {
+                if (user) {
+                    listScreen.style.display = 'block';
+                } else {
+                    listScreen.style.display = 'none';
+                }
+            })
+        }
+
+        const userSignOut = async() => {
+            await signOut(auth);
+        }
+
+        checkAuthState();
+
+        signUpButton.addEventListener('click', userSignUp);
+        signInButton.addEventListener('click', userSignIn);
+        signOutButton.addEventListener('click', userSignOut);
+    </script>
 </body>
 
 </html>
